--- a/socket/pyproject.toml
+++ b/socket/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["D.B. <derek.baugh1775@gmail.com>"]
 readme = "README.md"
-packages = [{include = "chat", from = "src"}]
+packages = [{include = "socket", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -14,7 +14,7 @@ hypercorn = "^0.17.3"
 aioredis = "^2.0.1"
 
 [tool.poetry.scripts]
-start = "chat:run"
+start = "socket:run"
 
 [tool.poetry.group.dev.dependencies]
 pytest-asyncio = "^0.23.8"
