--- a/loadbalancer/bird_configs/LB_A_bird.conf
+++ b/loadbalancer/bird_configs/LB_A_bird.conf
@@ -9,7 +9,7 @@
 # of your router, usually one of router's IPv4 addresses.
 # /etc/bird/bird.conf
 
-router id ; #Instance IP
+router id 45.32.85.138; #Instance IP
 
 # The Kernel protocol is not a real routing protocol. Instead of communicating
 # with other routers in the network, it performs synchronization of BIRD's
@@ -32,5 +32,14 @@ protocol direct {
 }
 
 protocol bgp vultr {
+
+	local as 4288000153;
+	source address 45.32.85.138;
+	import none;
+	export all;
+	graceful restart on;
+	multihop 2;
+	neighbor 169.254.169.254 as 64515;
+	password "5NtIuQq5wpmBFCZJ";
 	
 }
