--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,9 @@ websockets = "^12.0"
 hypercorn = "^0.17.3"
 websocket-client = "^1.8.0"
 quart-auth = "^0.10.1"
+requests = "^2.32.3"
+ipython = "^8.27.0"
+fpdf2 = "^2.7.9"
 
 [tool.poetry.scripts]
 start = "backend:run"
