--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,8 @@ requests = "^2.32.3"
 ipython = "^8.27.0"
 fpdf2 = "^2.7.9"
 nest-asyncio = "^1.6.0"
+aiohttp = "^3.10.5"
+aiodns = "^3.2.0"
 
 [tool.poetry.scripts]
 start = "backend:run"
