--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ fpdf2 = "^2.7.9"
 nest-asyncio = "^1.6.0"
 aiohttp = "^3.10.5"
 aiodns = "^3.2.0"
+grequests = "^0.7.0"
 
 [tool.poetry.scripts]
 start = "backend:run"
