--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ nest-asyncio = "^1.6.0"
 aiohttp = "^3.10.5"
 aiodns = "^3.2.0"
 grequests = "^0.7.0"
+redis = {extras = ["hiredis"], version = "^5.0.8"}
 
 [tool.poetry.scripts]
 start = "backend:run"
