--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ aiohttp = "^3.10.5"
 aiodns = "^3.2.0"
 grequests = "^0.7.0"
 redis = {extras = ["hiredis"], version = "^5.0.8"}
+asyncio-redis = "^0.16.0"
 
 [tool.poetry.scripts]
 start = "backend:run"
