--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ aiodns = "^3.2.0"
 grequests = "^0.7.0"
 redis = {extras = ["hiredis"], version = "^5.0.8"}
 asyncio-redis = "^0.16.0"
+asyncio = "^3.4.3"
 
 [tool.poetry.scripts]
 start = "backend:run"
