--- a/app/netifidash/common/codenameone_settings.properties
+++ b/app/netifidash/common/codenameone_settings.properties
@@ -23,7 +23,7 @@ codename1.packageName=com.bcl.netifidash
 codename1.rim.certificatePassword=
 codename1.rim.signtoolCsk=
 codename1.rim.signtoolDb=
-codename1.secondaryTitle=Hello World
+codename1.secondaryTitle=UniFi Network NOC Tool
 codename1.vendor=CodenameOne
 codename1.version=1.0
 codename1.cssTheme=true
