app -> backend testing

--- a/app/netifidash/common/pom.xml
+++ b/app/netifidash/common/pom.xml
@@ -21,6 +21,12 @@
 
         <!-- INJECT DEPENDENCIES -->
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
     </dependencies>
 
     <!-- The following are profiles to cover special cases -->
