--- a/core-node/Dockerfile
+++ b/core-node/Dockerfile
@@ -1,7 +1,5 @@
 FROM nvcr.io/nvidia/tensorflow:24.01-tf2-py3
 
-RUN pip install nvidia-cuda-nvcc
-
-RUN pip install nvidia-pyindex
+RUN pip install nvidia-pyindex nvidia-cuda-nvcc
 
 RUN pip install quart pandas numpy matplotlib seaborn scikit-learn ipykernel asyncio-redis redis Werkzeug nest_asyncio Flask-Cors asyncio hypercorn pytest-asyncio websocket-client
