--- a/core-node/Caddyfile
+++ b/core-node/Caddyfile
@@ -1,4 +1,9 @@
 # Caddyfile
+{
+    # Global settings
+    acme_ca https://acme-v02.api.letsencrypt.org/directory
+}
+
 nestumap.baughcl.com {
     reverse_proxy /register quart_app:5000/register
     reverse_proxy / quart_app:5000/
