--- a/core-node/Caddyfile
+++ b/core-node/Caddyfile
@@ -6,7 +6,7 @@
 
 netsumap.baughcl.com {
     reverse_proxy /register quart_app:5000/register
-    reverse_proxy / quart_app:5000/
+    reverse_proxy quart_app:5000
 
     # Handle ACME challenge requests directly
     route /.well-known/acme-challenge/* {
