--- a/core-node/Caddyfile
+++ b/core-node/Caddyfile
@@ -2,12 +2,9 @@
 
 netsumap.baughcl.com {
 
-    reverse_proxy / quart_app:5000 {
-        without /
-    }
-    reverse_proxy /register quart_app:5000/register {
-        without /register
-    }
+    reverse_proxy / quart_app:5000 
+    
+    reverse_proxy /register quart_app:5000/register 
 }
 
 
