--- a/core-node/Caddyfile
+++ b/core-node/Caddyfile
@@ -2,9 +2,13 @@
 
 netsumap.baughcl.com {
 
-    reverse_proxy / quart_app:5000 
-    
-    reverse_proxy /register quart_app:5000/register 
+    reverse_proxy * quart_app:5000 {
+        header_up Host {host}
+        header_up X-Real-IP {remote_host}
+        header_up X-Forwarded-For {remote_host}
+        header_up X-Forwarded-Proto {scheme}
+    }
+
 }
 
 
