--- a/core-node/Caddyfile
+++ b/core-node/Caddyfile
@@ -6,15 +6,28 @@ netsumap.baughcl.com {
 	}
 
 	handle /csv_inference* {
-		reverse_proxy quart_app:5000
+		reverse_proxy quart_app:5000 {
+            header_up Host {host}
+            header_up X-Real-IP {remote_host}
+            header_up X-Forwarded-For {remote_host}
+            header_up X-Forwarded-Proto {scheme}
+        }
 	}
 
     handle /json_inference* {
 		reverse_proxy quart_app:5000
+        header_up Host {host}
+        header_up X-Real-IP {remote_host}
+        header_up X-Forwarded-For {remote_host}
+        header_up X-Forwarded-Proto {scheme}
 	}
 
     handle /register* {
 		reverse_proxy quart_app:5000
+        header_up Host {host}
+        header_up X-Real-IP {remote_host}
+        header_up X-Forwarded-For {remote_host}
+        header_up X-Forwarded-Proto {scheme}
 	}
 
     handle /rmprobe* {
