--- a/core-node/Caddyfile
+++ b/core-node/Caddyfile
@@ -15,19 +15,23 @@ netsumap.baughcl.com {
 	}
 
     handle /json_inference* {
-		reverse_proxy quart_app:5000
-        header_up Host {host}
-        header_up X-Real-IP {remote_host}
-        header_up X-Forwarded-For {remote_host}
-        header_up X-Forwarded-Proto {scheme}
+		reverse_proxy quart_app:5000 {
+            header_up Host {host}
+            header_up X-Real-IP {remote_host}
+            header_up X-Forwarded-For {remote_host}
+            header_up X-Forwarded-Proto {scheme}
+        }
+        
 	}
 
     handle /register* {
-		reverse_proxy quart_app:5000
-        header_up Host {host}
-        header_up X-Real-IP {remote_host}
-        header_up X-Forwarded-For {remote_host}
-        header_up X-Forwarded-Proto {scheme}
+		reverse_proxy quart_app:5000 {
+            header_up Host {host}
+            header_up X-Real-IP {remote_host}
+            header_up X-Forwarded-For {remote_host}
+            header_up X-Forwarded-Proto {scheme}
+        }
+        
 	}
 
     handle /rmprobe* {
