--- a/core-node/Caddyfile
+++ b/core-node/Caddyfile
@@ -25,7 +25,7 @@ netsumap.baughcl.com {
 	}
 
     handle /register* {
-		reverse_proxy quart_app:5000/register {
+		reverse_proxy quart_app:5000 {
             header_up Host {host}
             header_up X-Real-IP {remote_host}
             header_up X-Forwarded-For {remote_host}
