--- a/core-node/Caddyfile
+++ b/core-node/Caddyfile
@@ -6,7 +6,7 @@ netsumap.baughcl.com {
 		reverse_proxy quart_app:5000
 	}
 
-    handle /register/* {
+    handle /register* {
 		reverse_proxy quart_app:5000
 	}
 
