--- a/core-node/Caddyfile
+++ b/core-node/Caddyfile
@@ -10,27 +10,27 @@ netsumap.baughcl.com {
 		reverse_proxy quart_app:5000
 	}
 
-    handle /csv_inference/* {
+    handle /csv_inference* {
 		reverse_proxy quart_app:5000
 	}
 
-    handle /json_inference/* {
+    handle /json_inference* {
 		reverse_proxy quart_app:5000
 	}
 
-    handle /rmprobe/* {
+    handle /rmprobe* {
 		reverse_proxy quart_app:5000
 	}
 
-    handle /netmetadata/* {
+    handle /netmetadata* {
 		reverse_proxy quart_app:5000
 	}
 
-    handle /isup/* {
+    handle /isup* {
 		reverse_proxy quart_app:5000
 	}
 
-    handle /allprobes/* {
+    handle /allprobes* {
 		reverse_proxy quart_app:5000
 	}
 
