--- a/core-node/docker-compose.yml
+++ b/core-node/docker-compose.yml
@@ -31,10 +31,22 @@ services:
     depends_on:
       - quart_app
 
+  mongo:
+    image: mongo
+    restart: always
+    container_name: mongo
+    volumes:
+      - mongo_data:/data
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+
 volumes:
   redis_data:
     external: true
   caddy_data:
     external: true
   caddy_config:
+    external: true
+  mongo_data: 
     external: true
