--- a/core-node/quartapp/requirements.txt
+++ b/core-node/quartapp/requirements.txt
@@ -5,7 +5,6 @@ matplotlib
 seaborn 
 scikit-learn 
 ipykernel 
-asyncio-redis 
 redis 
 Werkzeug 
 nest_asyncio 
@@ -15,3 +14,4 @@ hypercorn
 pytest-asyncio 
 aiohttp
 scapy
+aioredis
