--- a/core-node/docker-compose.yml
+++ b/core-node/docker-compose.yml
@@ -13,12 +13,19 @@ services:
     volumes:
     - quart_app_data:/home/quart/instance/pcaps
 
-
+  
   redis:
-    image: redis:latest
+    image: redis/redis-stack-server:latest
     container_name: redis
     volumes:
-      - redis_data:/data  # Mount the volume for data persistence
+      - redis_data:/data
+
+
+  # redis:
+  #  image: redis:latest
+  #  container_name: redis
+  #  volumes:
+  #    - redis_data:/data  # Mount the volume for data persistence
 
   caddy:
     image: caddy:latest
