--- a/core-node/docker-compose.yml
+++ b/core-node/docker-compose.yml
@@ -15,8 +15,9 @@ services:
 
   redis:
     image: redis/redis-stack-server:latest
+    environment:
+      - REDIS_ARGS=--save 1200 32
     container_name: redis
-    command: redis-server --dir /data --save 60 1 --appendonly yes
     volumes:
       - redis_data:/data
     healthcheck:
