--- a/core-node/docker-compose.yml
+++ b/core-node/docker-compose.yml
@@ -13,25 +13,25 @@ services:
     volumes:
       - quart_app_data:/home/quart/instance/pcaps
 
-  redis:
-    image: redis/redis-stack-server:latest
-    command: ["redis-server", "--save", "1200", "32"]
-    container_name: redis
-    volumes:
-      - redis_data:/data
-    healthcheck:
-          test: ["CMD", "redis-cli", "-h", "localhost", "-p", "6379", "ping"]
-          interval: 2s
-          timeout: 1m30s
-          retries: 5
-          start_period: 5s
-
-
-  # redis:
-  #  image: redis:latest
+  #redis:
+  #  image: redis/redis-stack-server:latest
+  #  environment:
+  #    - REDIS_ARGS=--save 1200 32
   #  container_name: redis
   #  volumes:
-  #    - redis_data:/data  # Mount the volume for data persistence
+  #    - redis_data:/data
+  #  healthcheck:
+  #        test: ["CMD", "redis-cli", "-h", "localhost", "-p", "6379", "ping"]
+  #        interval: 2s
+  #        timeout: 1m30s
+  #        retries: 5
+  #        start_period: 5s
+  
+  redis:
+    image: redis:latest
+    container_name: redis
+    volumes:
+      - redis_data:/data  # Mount the volume for data persistence
 
   caddy:
     image: caddy:latest
