--- a/probe/quartapp/Dockerfile
+++ b/probe/quartapp/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:latest
 
 # Create a user
-RUN useradd -ms /bin/bash quart
+RUN useradd -m quart
 
 # Set working directory for the purpose of this Dockerfile
 WORKDIR /home/quart
