--- a/probe/quartapp/Dockerfile
+++ b/probe/quartapp/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM ubuntu:24.04
 
 # Create a user
 RUN useradd -m quart
@@ -10,7 +10,7 @@ RUN apt-get update -y
 
 RUN apt-get upgrade -y
 
-# Install dependencies for building libpcap and other tools
+# Install dependencies
 RUN apt-get install -y \
     git \
     iperf3 \
@@ -19,10 +19,25 @@ RUN apt-get install -y \
     python3-pip 
 
 # Copy requirements to the app root
-COPY quartapp/requirements.txt ./
+# COPY quartapp/requirements.txt ./
 
 # Install pip dependencies
-RUN pip install --no-cache-dir -r requirements.txt --upgrade 
+RUN apt-install -y \
+    python3-quart \
+    python3-nest_asyncio \
+    python3-Flask-Cors \
+    python3-asyncio \
+    python3-hypercorn \
+    python3-pytest-asyncio \
+    python3-aiohttp \
+    python3-scapy \
+    python3-requests \
+    python3-psutil \
+    python3-iperf3 \
+    python3-sqlite3 \
+    python3-pyshark
+
+# RUN pip install --no-cache-dir -r requirements.txt --upgrade 
 
 # Copy the app into our user root
 COPY quartapp/ /home/quart/
