--- a/probe/quartapp/Dockerfile
+++ b/probe/quartapp/Dockerfile
@@ -21,7 +21,7 @@ RUN apt-get update -y
 RUN apt-get upgrade -y
 
 # Copy requirements to the app root
-# COPY quartapp/requirements.txt ./
+COPY quartapp/requirements.txt ./
 
 # Install dependencies
 RUN apt-get install -y \
@@ -29,21 +29,9 @@ RUN apt-get install -y \
     iperf3 \
     p0f \
     tshark \
-    python3-quart \
-    python3-nest_asyncio \
-    python3-Flask-Cors \
-    python3-asyncio \
-    python3-hypercorn \
-    python3-pytest-asyncio \
-    python3-aiohttp \
-    python3-scapy \
-    python3-requests \
-    python3-psutil \
-    python3-iperf3 \
-    python3-sqlite3 \
-    python3-pyshark
-
-# RUN pip install --no-cache-dir -r requirements.txt --upgrade 
+    pipx
+  
+RUN pipx install --no-cache-dir -r requirements.txt --upgrade 
 
 # Copy the app into our user root
 COPY quartapp/ /home/quart/
