--- a/core-node/quartapp/requirements.txt
+++ b/core-node/quartapp/requirements.txt
@@ -1,18 +1,19 @@
-quart 
-pandas 
-numpy 
-matplotlib 
-seaborn 
-scikit-learn 
-ipykernel 
-redis 
-Werkzeug 
-nest_asyncio 
-Flask-Cors 
-asyncio 
-pytest-asyncio 
+quart == 0.19.9
+pandas == 2.2.3
+numpy == 1.26.4
+matplotlib == 3.10.0
+seaborn == 0.13.2
+scikit-learn == 1.6.0
+ipykernel == 6.29.5
+redis == 5.2.1
+Werkzeug == 3.1.3
+nest_asyncio == 1.6.0
+Flask-Cors == 5.0.0
+asyncio == 3.4.3
+pytest-asyncio == 0.25.0
+aiohttp == 3.11.10
+scapy == 2.6.1
+aioredis == 2.0.1
+uvicorn ==  0.33.0
+iperf3 == 0.1.11
 aiohttp
-scapy
-aioredis
-uvicorn
-iperf3
